recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:5: error: ')' expected but '<-' found.
	spiral(steps-1,angle,length + 3 <- 12, incfrement );
                                        ^